added info in README

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </section>
 
     <footer>
-      <p><a class="link" href="index.html">Ocean News</a> | Skapad av Linnéa Wilhelmsson 🐘 </p>
+      <p><a class="linkfooter" href="index.html">Ocean News</a> | By Linnéa Wilhelmsson 🐘 </p>
   </footer>
 
   </body>
