--- a/code/index.html
+++ b/code/index.html
@@ -13,7 +13,7 @@
   <body>
     <header>
       <div class="header-child logo">
-        <img class="header-child technico" src="../code/logo.svg" alt="Technico" />
+        <img class="header-child technico" src="./logo.svg" alt="Technico" />
         <img class="header-child zebra" src="./images.jpg" alt="zebra"/>
         <p class="header-child titel">Zebra News</p>
       </div>
@@ -21,7 +21,7 @@
             <ul>
               <li><a href="https://www.blueletterbible.org/">Big  Zebra News</a></li>
               <li><a href="https://www.msn.com/nl-nl/nieuws">Small  Zebra News</a></li>
-              <li><a href="#">Contact Zebra News</a></li>
+             <li><a href="#">Contact Zebra News</a></li>
               <li><button>Donate Zebra News</button></li>
             </ul>
           </nav>
