finished-changed photos, animation, hoover.

--- a/code/index.html
+++ b/code/index.html
@@ -26,61 +26,65 @@
 
   <section class="big-news">
     <!-- The big news content -->
-    <img class="big-news-image" src="./seaburn.jpeg" alt="big news" />
-    <h2 class="big-news-title">Bigg news</h2>
-    <p class="big-news-text">
-      Lorem ipsum is a pseudo-Latin text used in web design, typography, layout, and printing in place of English to
-      emphasise design elements over content.
-    </p>
+    <img class="big-news-image" src="./paper3.jpeg" alt="big news" />
+    <div class="text-container">
+      <h2 class="big-news-title">BIG NEWS</h2>
+      <p class="big-news-text">
+        Lorem ipsum is a pseudo-Latin text used in web design, typography, layout, and printing in place of English to
+        emphasise design elements over content.Lorem ipsum is a pseudo-Latin text used in web design, typography,
+        layout, and printing in place of English to
+        emphasise design elements over content.
+      </p>
+    </div>
   </section>
 
   <hr>
   <section class="flex-parent">
     <div class="flex-child blue">
-      <img src="rainfall.jpg" alt="Germany">
+      <img src="./paper8.jpg" alt="Germany">
       <p>Lorem ipsum is a pseudo-Latin text used in web design, typography, layout, and printing in place of English to
         emphasise design elements over content.
       </p>
       <button>read more</button>
     </div>
     <div class="flex-child green">
-      <img src="croatia.jpg" alt="croatia">
+      <img src="./paper1.jpeg" alt="croatia">
       <p>Lorem ipsum is a pseudo-Latin text used in web design, typography, layout, and printing in place of English to
         emphasise design elements over content.</p>
       <button>Read more</button>
     </div>
     <div class="flex-child yellow">
-      <img src="sea.jpeg" alt="sea">
+      <img src="./paper2.jpeg" alt="sea">
       <p>Lorem ipsum is a pseudo-Latin text used in web design, typography, layout, and printing in place of English to
         emphasise design elements over content.</p>
       <button>read more</button>
     </div>
     <div class="flex-child yellow">
-      <img src="seaburn.jpeg" alt="seaburn">
+      <img src="./paper4.jpg" alt="seaburn">
       <p>Lorem ipsum is a pseudo-Latin text used in web design, typography, layout, and printing in place of English to
         emphasise design elements over content.</p>
       <button>read more</button>
     </div>
     <div class="flex-child yellow">
-      <img src="corona.png" alt="corona">
+      <img src="./paper.jpeg" alt="reading newspaper">
       <p>Lorem ipsum is a pseudo-Latin text used in web design, typography, layout, and printing in place of English to
         emphasise design elements over content.</p>
       <button>read more</button>
     </div>
     <div class="flex-child yellow">
-      <img src="sas.jpg" alt="sas">
+      <img src="./paper5.jpeg" alt="sas">
       <p>Lorem ipsum is a pseudo-Latin text used in web design, typography, layout, and printing in place of English to
         emphasise design elements over content.</p>
       <button>read more</button>
     </div>
     <div class="flex-child yellow">
-      <img src="sas.jpg" alt="sas">
+      <img src="./paper6.jpeg" alt="sas">
       <p>Lorem ipsum is a pseudo-Latin text used in web design, typography, layout, and printing in place of English to
         emphasise design elements over content.</p>
       <button>read more</button>
     </div>
     <div class="flex-child yellow">
-      <img src="sas.jpg" alt="sas">
+      <img src="./paper7.jpeg" alt="sas">
       <p>Lorem ipsum is a pseudo-Latin text used in web design, typography, layout, and printing in place of English to
         emphasise design elements over content.</p>
       <button>read more</button>
