--- a/code/index.html
+++ b/code/index.html
@@ -16,9 +16,11 @@
       crossorigin="anonymous"
     ></script>
   </head>
+
   <body>
     <header class="header">
       <img class="logo" src="./logo_transparent.png" alt="Inte Hon Art Logo" />
+
       <nav class="navigation">
         <a href="#">Art</a>
         <p class="navigation">|</p>
@@ -28,9 +30,9 @@
         <p class="navigation">|</p>
         <a class="search-link" href="#">Search</a>
       </nav>
-
-      <!-- Logo and navbar -->
     </header>
+
+    <!-- Logo and navbar -->
 
     <section class="big-news-wrapper">
       <div class="big-news-container">
@@ -40,12 +42,15 @@
             src="elliott-high-res-2.jpg"
             alt="Picture by Angelica Elliott"
           />
+
           <p class="img-text">From the series Rågsved © Angelica Elliott.</p>
         </div>
+
         <div class="big-news-text">
           <div class="category-top">
             <h4 class="category">Photography</h4>
           </div>
+
           <p class="big-news-text"><i>Article by Michael Grieve.</i></p>
           <h2 class="big-news-text">
             <span class="preamble"
@@ -54,6 +59,7 @@
               comes to terms with a troubled past</span
             >
           </h2>
+
           <p class="big-news-text">
             <b>Angelica Elliott arrived</b> in Rågsved, a southern suburb of
             Stockholm, seven years ago. Almost immediately, she started taking
@@ -64,6 +70,7 @@
             into my therapy. It felt important to show my place, and my place
             within my place.”
           </p>
+
           <p class="big-news-text">
             <b>As she became acquainted</b> with the area, Elliott began to
             assist JH Engström and Margot Wallard with their workshop project,
@@ -113,6 +120,7 @@
             and late nights; and the exterior world outside, the built-up
             environment and people that comprise Rågsved itself.
           </p>
+
           <p class="read-more">
             <b>However, Rågsved is more</b> than a sensitive, diaristic
             collection of photographs from this location. It is also a visual
@@ -125,6 +133,7 @@
             dry on the kitchen sink gleams with sunlight. Everyday objects
             momentarily develop a personality, inanimate yet alive.
           </p>
+
           <p class="read-more">
             <b>A strong sensibility emanates</b> from the pages of the book,
             suggesting there is something hidden within its fabric. The images
@@ -138,6 +147,7 @@
             resulted in her move to Rågsved. She was searching for a fresh
             perspective and a way to heal.
           </p>
+
           <div class="read-more">
             <div class="big-news-img-container">
               <img
@@ -147,6 +157,7 @@
               />
             </div>
           </div>
+
           <p class="big-news-text">
             Read full article on
             <a
@@ -166,6 +177,7 @@
         </div>
       </div>
     </section>
+
     <!-- The big news content -->
 
     <hr class="horizontal" />
@@ -173,6 +185,7 @@
     <div class="spotlight">
       <h2 class="spotlight">Spotlight</h2>
     </div>
+
     <hr class="horizontal" />
 
     <section class="small-news-wrapper">
@@ -195,7 +208,6 @@
             for his stylistic short films, and currently directing his first
             full length feature, Hypnosen.
           </p>
-
           <p class="small-news-text">
             His most recent short film, Wimbledon, premiered at Bergen
             International Film Festival 2019 and was nominated for ‘Best
@@ -210,11 +222,12 @@
           src="jenny-fabric.JPG"
           alt="Fabric by Jenny Söderbäck"
         />
+
         <div class="category-bottom">
           <p>Art</p>
         </div>
-        <a class="blank-link" href="https://mandel.gart.nz/" target="_blank"
-          ><h4>Jenny Söderbäck - A Retrospective</h4>
+        <a class="blank-link" href="https://mandel.gart.nz/" target="_blank">
+          <h4>Jenny Söderbäck - A Retrospective</h4>
           <p class="small-news-text">
             This is the first major museum exhibition devoted to the full scope
             of the career of Jenny Söderbäck, widely considered to be among the
