updated content and added read me

--- a/code/index.html
+++ b/code/index.html
@@ -39,14 +39,14 @@
       </header>
       <!-- The big news content -->
       <section class="mobile-only-section">
-        <img class="mobile-big-news-image" src="https://cdn.pixabay.com/photo/2016/11/23/14/41/characters-1853286_1280.jpg" style="background-image">
+        <img class="mobile-big-news-image" src="https://live.staticflickr.com/8350/8161900558_6e67bf545a_o.jpg" style="background-image">
         <h2>An
           <div class="big-news-text">
           <em>eye-catching</em>
           heading
         </h2>
         <button class="btn news-btn">
-          <a href="#">My button</a>
+          <a href="https://flic.kr/s/aHsmuxMFbv">My button</a>
         </button>
       </section>
       <section class="desktop-only-section">
