--- a/code/index.html
+++ b/code/index.html
@@ -362,7 +362,7 @@
       <div class="small-news-container">
         <img
           class="small-news-img"
-          src="wine-trade.jpg"
+          src="wine-trade.png"
           alt="Wine Trade Wine Bar"
         />
         <div class="category-bottom">
@@ -392,13 +392,13 @@
         <a
           class="blank-link2"
           href="https://www.linkedin.com/in/emelie-s%C3%B6derhielm-14105121a/"
-          ><i class="fab fa-linkedin fa-2x"></i
+          ><i class="fab fa-linkedin fa-l"></i
         ></a>
         <a class="blank-link2" href="https://github.com/intehon"
-          ><i class="fab fa-github fa-2x"></i
+          ><i class="fab fa-github fa-l"></i
         ></a>
         <a class="blank-link2" href="mailto:intehon@gmail.com"
-          ><i class="fas fa-envelope fa-2x"></i
+          ><i class="fas fa-envelope fa-l"></i
         ></a>
       </nav>
     </footer>
